--- a/PRATICA/AULA_2/Exercicio.html
+++ b/PRATICA/AULA_2/Exercicio.html
@@ -22,7 +22,7 @@
             <p>Exercicio</p>
         </div>
 
-        <p id="Hover">Clique Aqui</p>
+        <p id="Hover" hover>Clique Aqui</p>
 
 
 
