--- a/PRATICA/LAB_1/Index.html
+++ b/PRATICA/LAB_1/Index.html
@@ -3,37 +3,32 @@
     <head>
         <title>Caio Alexandre Machado Silva</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="extensao.css">
 
         <body>
+
+            <a href="Project.html">Projetos</a>
             <h1>Caio Alexandre Machado Silva</h1>
 
-            <p>Meu nome é Caio Alexandre, tenho 21 anos de idade e sou técnico de Automação na Yaskawa Elétrico do Brasil</p>
-            <br>
+            <p>Meu nome é Caio Alexandre Machado Silva e atuo como Técnico Eletrônico na Yaskawa Elétrico do Brasil. Tenho formação técnica em Administração e Automação, com experiência em manutenção preventiva e corretiva de equipamentos industriais, especialmente no diagnóstico e reparo de inversores de frequência. Atualmente, curso Ciência de Dados e Inteligência Artificial na FEI, buscando ampliar meus conhecimentos na área de análise de dados e automação inteligente. Sou uma pessoa determinada e focada, e meu objetivo é me tornar um Cientista de Dados, unindo minha experiência técnica à capacidade de transformar dados em insights estratégicos.</p>
             <p>Minhas atividades favoritas são:</p>
 
-            <ol>
-                <li>Estudar</li>
-                <li>Ler</li>
-                <li>Viajar</li>
-                <li>Jogar</li>
-                <li>Nadar</li>
-            </ol>
+            <ul>
+                <li>Estudar <img src="https://cdn-icons-png.flaticon.com/512/540/540112.png" alt="Estudar Imagem" width="24" height="24" style="vertical-align: middle;"></li>
+                <li>Ler <img src="https://th.bing.com/th/id/OIP.X3dEQ9rrPIRiiW5PDiLvGAHaHa?rs=1&pid=ImgDetMain" alt="Ler Imagem" width="24" height="24" style="vertical-align: middle;"></li>
+                <li>Viajar <img src="https://cdn2.iconfinder.com/data/icons/transportation-icons-6/62/Logistics-Shipping-transport-cargo-transportation_03-1024.png" width="24" height="24" alt="Viajar Imagem" style="vertical-align: middle;"></li>
+                <li>Jogar <img src="https://cdn2.iconfinder.com/data/icons/video-games-31/24/video-game-xbox-controller--xbox-video-game-controller-512.png" width="24" height="24" alt="Jogar Imagem" style="vertical-align: middle;"></li>
+                <li>Nadar <img src="https://th.bing.com/th/id/OIP.cECWjBhuuKX4bsebPI4mBgAAAA?w=256&h=256&rs=1&pid=ImgDetMain" alt="Nadar Imagem" width="24" height="24" style="vertical-align: middle;">
+                </li>
+            </ul>
 
-            <img src="https://cdn-icons-png.flaticon.com/512/540/540112.png" alt="Estudar Imagem" width="100" height="100">
-            <img src="https://th.bing.com/th/id/OIP.X3dEQ9rrPIRiiW5PDiLvGAHaHa?rs=1&pid=ImgDetMain" alt="Ler Imagem" width="100" height="100">
-            <img src="https://cdn2.iconfinder.com/data/icons/transportation-icons-6/62/Logistics-Shipping-transport-cargo-transportation_03-1024.png" width="100" height="100" alt="Viajar Imagem">
-            <img src="https://cdn2.iconfinder.com/data/icons/video-games-31/24/video-game-xbox-controller--xbox-video-game-controller-512.png" width="100" height="100" alt="Jogar Imagem">
-            <img src="https://th.bing.com/th/id/OIP.cECWjBhuuKX4bsebPI4mBgAAAA?w=256&h=256&rs=1&pid=ImgDetMain" alt="Nadar Imagem" width="100" height="100">
 
             <p>Essas são as pricipais ferramentas que costumo usar:</p>
+            <a:hover a href="https://chatgpt.com/">ChatGPT</a>
             <br>
-            <a hover href="https://chatgpt.com/">ChatGPT</a>
+            <a:hover a href="https://gemini.google.com/app?hl=pt-PT">Gemini</a>
             <br>
-            <a hover href="https://gemini.google.com/app?hl=pt-PT">Gemini</a>
-            <br>
-            <a hover href="https://www.deepseek.com/">DeepSeek</a>
-
-            <br>
+            <a:hover a href="https://www.deepseek.com/">DeepSeek</a>
 
             <p>Atualmente estudo na FEI, localizada em SBC.</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d233758.28926032592!2d-46.72720052486533!3d-23.730496907947032!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce4158ef9c7c05%3A0x776b798985695f52!2sFEI%20-%20Campus%20S%C3%A3o%20Bernardo%20do%20Campo!5e0!3m2!1spt-BR!2sbr!4v1739839162672!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
