--- a/PRATICA/MODELO/PROGRAMA/Index.html
+++ b/PRATICA/MODELO/PROGRAMA/Index.html
@@ -6,6 +6,14 @@
         <link href="Estilo.css" rel="stylesheet">
 
         <body>
+            <div class="mensage">
+                <img div="IMGtop"src="c++.png" alt="C++ Icone" class="logo" width="150" height="150">
+            <div id="mensage">
+                <h1>C++ e Java</h1>
+            </div>
+                <img div="IMGtop" src="java.png" alt="Java Icone" class="logo" width="150" height="150">
+            </div>
+
             <h2>Introdução</h2>
 
             <div class="Texto">
@@ -56,11 +64,11 @@
                 </div>
         
                 <div class="mensagem">
-                    <img src="html.png" alt="HTML5" class="logo" width="100" height="100">
-                    <p>Desejamos um excelente semestre a todos.</p>
-                    <br>
-                    <p class="fonte-info">(Fonte Usada: <i>Comic Sans MS</i>, tamanho 15pt)</p>
-                    <img src="css.png" alt="CSS3" class="logo" width="100" height="100">
+                    <img div="IMG"src="html.png" alt="HTML5" class="logo" width="100" height="100">
+                <div id="mensagem">
+                    <p>Desejamos um excelente semestre a todos.<br>(Fonte Usada: <i>Comic Sans MS</i>, tamanho 15pt)</p></p>
+                </div>
+                    <img div="IMG" src="css.png" alt="CSS3" class="logo" width="100" height="100">
                 </div>
             </div>
 
