--- a/PRATICA/MODELO/PROGRAMA/Index.html
+++ b/PRATICA/MODELO/PROGRAMA/Index.html
@@ -14,6 +14,13 @@
                 <img div="IMGtop" src="java.png" alt="Java Icone" class="logo" width="150" height="150">
             </div>
 
+            <div class="top">
+                <a>Home</a>
+                <a>Videos</a>
+                <a>Livros</a>
+                <a>Contatos</a>
+            </div>
+
             <h2>Introdução</h2>
 
             <div class="Texto">
@@ -39,19 +46,22 @@
 
             <h2>Contatos</h2>
             <br>
-            <table>
-                <tr>
-                    <td class=>NOME</td>
-                    <td class=>E-MAIL</td>
-                </tr>
-                <tr>
-                    <td>Prof. Dr. Fagner Pimentel</td>
-                    <td>fpimentel@fei.edu.br</td>
-                </tr>
-                    <td>Prof. Dr. Isaac Jesus Silva</td>
-                    <td>isaacjesus@fei.edu.br</td>
-                </tr>
-            </table>
+            <div class="table-container">
+                <table>
+                    <tr>
+                        <th class="vermelho">Nome</th>
+                        <th class="vermelho">Email</th>
+                    </tr>
+                    <tr>
+                        <td>Prof. Dr. Fagner Pimentel</td>
+                        <td>fpimentel@fei.edu.br</td>
+                    </tr>
+                    <tr>
+                        <td>Prof. Dr. Isaac Jesus da Silva</td>
+                        <td>isaacjesus@fei.edu.br</td>
+                    </tr>
+                </table>
+            </div>
 
             <div class="container">
                 <div class="links">
