--- a/PRATICA/LAB_1/Project.html
+++ b/PRATICA/LAB_1/Project.html
@@ -13,12 +13,12 @@
             <br>
             <table>
                 <tr>
-                    <td>Projeto_1</td>
-                    <td><a href="">Link</a></td>
+                    <td>Modelo Site</td>
+                    <td><a href="C:\Users\uniccsilva\Documents\GitHub\FullStack\PRATICA\MODELO\PROGRAMA\Index.html">Link</a></td>
                 </tr>
                 <tr>
-                    <td>Projeto_2</td>
-                    <td><a href="">Link</a></td>
+                    <td>Jogo de Adivinhação</td>
+                    <td><a href="C:\Users\uniccsilva\Documents\GitHub\FullStack\PRATICA\LAB_4\guess.html">Link</a></td>
                 </tr>
                 <tr>
                     <td>Projeto_3</td>
