--- a/PRATICA/MODELO/PROGRAMA/Index.html
+++ b/PRATICA/MODELO/PROGRAMA/Index.html
@@ -29,7 +29,7 @@
             <p>Java foi desenvolvida por um grupo de pesquisadores da SUN Microsystems por volta de 1990, pouco antes da explosão da Internet. Essa linguagem possui estrutura muito semelhante à da linguagem C, da qual descende imediatamente. Java tem em comum com a linguagem C++ o fato de ser orientada a objetos e mantém com esta uma alto grau de semelhança. </p>
             </div>
 
-            <h2>Livros</h2>
+            <h2 class="ajuste">Livros</h2>
             <div id="Livros">
                 <img src="book1.jpg" alt="Projeto de Algoritmos" width="350" height="500">
                 <img src="book2.jpg" alt="The C++ Programming Language" width="350" height="500">
@@ -37,8 +37,7 @@
             </div>
             
 
-            <h2>Aprenda a programar com Java e C++ na FEI.</h2>
-
+            <h2 class="ajuste">Aprenda a programar com Java e C++ na FEI.</h2>
             <div id="iframes">
                 <iframe width="600" height="450" src="https://www.youtube.com/embed/4MHAOPxcnsQ?si=gLp0znx7_8SJDEOC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d233760.10906208117!2d-46.736410689161694!3d-23.729482233993124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce4158ef9c7c05%3A0x776b798985695f52!2sFEI%20-%20Campus%20S%C3%A3o%20Bernardo%20do%20Campo!5e0!3m2!1spt-BR!2sbr!4v1740444430250!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
