--- a/PRATICA/LAB/LAB_1 - SITE/Project.html
+++ b/PRATICA/LAB/LAB_1 - SITE/Project.html
@@ -26,7 +26,7 @@
                 </tr>
                 <tr>
                     <td>Animação</td>
-                    <td><a href="C:\Users\uniccsilva\Documents\GitHub\FullStack\PRATICA\LAB_08\Animation.html">Link</a></td>
+                    <td><a href="C:\Users\uniccsilva\Documents\GitHub\FullStack\PRATICA\LAB_08 - ANIMAÇÃO\Animation.html">Link</a></td>
                 </tr>
                 <tr>
                     <td>Projeto_5</td>
