--- a/PRATICA/AULA/SERVIDOR/PUBLIC/LAB/Project.html
+++ b/PRATICA/AULA/SERVIDOR/PUBLIC/LAB/Project.html
@@ -14,27 +14,27 @@
             <table>
                 <tr>
                     <td>Modelo Site</td>
-                    <td><a href="C:\Users\uniccsilva\Documents\GitHub\FullStack\PRATICA\MODELO\PROGRAMA\Index.html">Link</a></td>
+                    <td><a href="LAB_3 - MODELO/PROGRAMA/Index.html">Link</a></td>
                 </tr>
                 <tr>
                     <td>Jogo de Adivinhação</td>
-                    <td><a href="C:\Users\uniccsilva\Documents\GitHub\FullStack\PRATICA\LAB_4\guess.html">Link</a></td>
+                    <td><a href="LAB_4 - JOGO ADIVINHAÇÃO/guess.html">Link</a></td>
                 </tr>
                 <tr>
                     <td>Canva</td>
-                    <td><a href="">Link</a></td>
+                    <td><a href="LAB_5 - CANVA/Canvas.html">Link</a></td>
                 </tr>
                 <tr>
                     <td>Animação</td>
-                    <td><a href="C:\Users\uniccsilva\Documents\GitHub\FullStack\PRATICA\LAB_08 - ANIMAÇÃO\Animation.html">Link</a></td>
+                    <td><a href="LAB_6 - ANIMAÇÃO/Animation.html">Link</a></td>
                 </tr>
                 <tr>
                     <td>Projeto_5</td>
-                    <td><a href="">Link</a></td>
+                    <td><a href="C:\Users\uniccsilva\Documents\GitHub\FullStack\PRATICA\AULA\SERVIDOR\PUBLIC\LAB\LAB_6 - ANIMAÇÃO\Animation.html">Link</a></td>
                 </tr>
                 <tr>
                     <td>Projeto_6</td>
-                    <td><a href="">Link</a></td>
+                    <td><a href="C:\Users\uniccsilva\Documents\GitHub\FullStack\PRATICA\AULA\SERVIDOR\PUBLIC\LAB\LAB_6 - ANIMAÇÃO\Animation.html">Link</a></td>
                 </tr>
             </table>
         
