--- a/PRATICA/SERVIDOR/PUBLIC/LAB/Project.html
+++ b/PRATICA/SERVIDOR/PUBLIC/LAB/Project.html
@@ -29,8 +29,8 @@
                     <td><a href="LAB_6 - ANIMAÇÃO/Animation.html">Link</a></td>
                 </tr>
                 <tr>
-                    <td>Projeto_5</td>
-                    <td><a href="C:\Users\uniccsilva\Documents\GitHub\FullStack\PRATICA\AULA\SERVIDOR\PUBLIC\LAB\LAB_6 - ANIMAÇÃO\Animation.html">Link</a></td>
+                    <td></td>Get - Post - Template
+                    <td><a href="LAB_8 - GET_POST_TEMPLATE/cadastro.html">Link</a></td>
                 </tr>
                 <tr>
                     <td>Projeto_6</td>
