--- a/PRATICA/SERVIDOR/PUBLIC/LAB/Project.html
+++ b/PRATICA/SERVIDOR/PUBLIC/LAB/Project.html
@@ -29,8 +29,8 @@
                     <td><a href="LAB_6 - ANIMAÇÃO/Animation.html">Link</a></td>
                 </tr>
                 <tr>
-                    <td></td>Get - Post - Template
-                    <td><a href="LAB_8 - GET_POST_TEMPLATE/cadastro.html">Link</a></td>
+                    <td>Get - Post - Template</td>
+                    <td><a href="LAB_8 - GET_POST_TEMPLATE/login.html">Link</a></td>
                 </tr>
                 <tr>
                     <td>Projeto_6</td>
