--- a/PRATICA/SERVIDOR/PUBLIC/LAB/LAB_8 - GET_POST_TEMPLATE/login.html
+++ b/PRATICA/SERVIDOR/PUBLIC/LAB/LAB_8 - GET_POST_TEMPLATE/login.html
@@ -2,15 +2,19 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Cadastro</title>
-  <link rel="stylesheet" href="/style.css">
+  <title>Login</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Cadastro de Usuário</h1>
-  <form action="/resposta" method="POST">
+  <h1>Login</h1>
+  <form action="resposta" method="POST">
     <input type="text" name="usuario" placeholder="Usuário" required>
+    <br>
+    <br>
     <input type="password" name="senha" placeholder="Senha" required>
-    <button type="submit">Cadastrar</button>
+    <br>
+    <br>
+    <button type="submit">Entrar</button>
   </form>
 </body>
 </html>
