--- a/PRATICA/SERVIDOR/PUBLIC/index.html
+++ b/PRATICA/SERVIDOR/PUBLIC/index.html
@@ -28,13 +28,11 @@
             <input type="submit" value="Cadastrar">
         </form>
 
-        <h2>Exemplo de Cadastro de Usuário Usando POST</h2>
-        <form method="get" action="/cadastrar">
-            <p>Nome: <input type="text" name="Nome"></p>
+        <h2>Exemplo de Login de Usuário Usando POST</h2>
+        <form method="post" action="/login">
             <p>Email: <input type="email" name="Email"></p>
             <p>Senha <input type="password" name="Senha"></p>
-            <p>Nascimento: <input type="date" name="Nascimento"></p>
-            <input type="submit" value="Cadastrar">
+            <input type="submit" value="Login">
         </form>
 
         <h2>Exemplo de For no EJS</h2>
