--- a/PRATICA/SERVIDOR/PUBLIC/LAB/LAB_8 - GET_POST_TEMPLATE/cadastro.html
+++ b/PRATICA/SERVIDOR/PUBLIC/LAB/LAB_8 - GET_POST_TEMPLATE/cadastro.html
@@ -8,9 +8,8 @@
 
 <body>
 
-  <h1>Cadastro de Usuário</h1>
-
-  <form action="resposta" method="POST">
+  <form action="/resposta" method="post">
+    <h1>Cadastro de Usuário</h1>
     <input type="text" name="usuario" placeholder="Usuário" required>
     <br>
     <br>
