--- a/PRATICA/SERVIDOR/PUBLIC/LAB/LAB_8 - GET_POST_TEMPLATE/login.html
+++ b/PRATICA/SERVIDOR/PUBLIC/LAB/LAB_8 - GET_POST_TEMPLATE/login.html
@@ -6,8 +6,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Login</h1>
-  <form action="resposta" method="POST">
+
+  <form action="/resposta" method="post">
+    <h1>Login</h1>
     <input type="text" name="usuario" placeholder="Usuário" required>
     <br>
     <br>
@@ -16,5 +17,6 @@
     <br>
     <button type="submit">Entrar</button>
   </form>
+
 </body>
 </html>
