--- a/PRATICA/SERVIDOR/PUBLIC/LAB/Project.html
+++ b/PRATICA/SERVIDOR/PUBLIC/LAB/Project.html
@@ -33,8 +33,8 @@
                     <td><a href="LAB_8 - GET_POST_TEMPLATE/login.html">Link</a></td>
                 </tr>
                 <tr>
-                    <td>Projeto_6</td>
-                    <td><a href="C:\Users\uniccsilva\Documents\GitHub\FullStack\PRATICA\AULA\SERVIDOR\PUBLIC\LAB\LAB_6 - ANIMAÇÃO\Animation.html">Link</a></td>
+                    <td>Blog</td>
+                    <td><a href="LAB_9 - CREAT_READ/cadastrar_post.html">Link</a></td>
                 </tr>
             </table>
         
