--- a/PRATICA/PROJETO/jogo.html
+++ b/PRATICA/PROJETO/jogo.html
@@ -20,7 +20,7 @@
     <h1>One More Minute Until the End of the World</h1>
 
     <div class="game-container">
-      <canvas id="gameCanvas" width="800" height="550"></canvas>
+      <canvas id="gameCanvas" width="800" height="600"></canvas>
       <button id="startButton">Start!</button>
     </div>
 
@@ -35,6 +35,6 @@
 
   <footer>© 2025 – Projeto acadêmico FEI | One More Minute Until the End of the World</footer>
 
-  <script src="jogo.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
