--- a/PRATICA/PROJETO/jogo.html
+++ b/PRATICA/PROJETO/jogo.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body tabindex="0" style="outline: none;">
   <nav>
     <ul>
       <li><a href="index.html">Início</a></li>
@@ -20,21 +20,12 @@
     <h1>One More Minute Until the End of the World</h1>
 
     <div class="game-container">
-      <canvas id="gameCanvas" width="800" height="600"></canvas>
+      <canvas id="gameCanvas" width="1000" height="505"></canvas>
       <button id="startButton">Start!</button>
     </div>
-
-    <h2>Controles:</h2>
-    <ul>
-      <li>← / → ou A/D: mover</li>
-      <li>↑ ou W: pular</li>
-      <li>Espaço: atirar</li>
-      <li>A cada minuto: power-up + nova onda de inimigos</li>
-    </ul>
+    <footer>© 2025 – Projeto acadêmico FEI | One More Minute Until the End of the World</footer>
   </main>
-
-  <footer>© 2025 – Projeto acadêmico FEI | One More Minute Until the End of the World</footer>
-
   <script src="script.js"></script>
 </body>
 </html>
+
