--- a/PRATICA/SERVIDOR/PUBLIC/LAB/Project.html
+++ b/PRATICA/SERVIDOR/PUBLIC/LAB/Project.html
@@ -34,7 +34,7 @@
                 </tr>
                 <tr>
                     <td>Blog</td>
-                    <td><a href="LAB_9 - CREAT_READ/cadastrar_post.html">Link</a></td>
+                    <td><a href="LAB_9 - BD - READ E CREATE/cadastrar_post.html">Link</a></td>
                 </tr>
             </table>
         
