--- a/PRATICA/PROJETO/dev.html
+++ b/PRATICA/PROJETO/dev.html
@@ -17,7 +17,7 @@
   </nav>
 
   <main>
-    <h1>Desenvolvedores</h1>
+    <h1>Dev's</h1>
 
     <section class="dev-profile">
       <img src="images/caio.jpg" alt="Foto de Caio Alexandre Machado Silva">
