--- a/PRATICA/PROJETO/index.html
+++ b/PRATICA/PROJETO/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mais um minuto para o fim do mundo</title>
+  <title>Invaders</title>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -17,7 +17,7 @@
   </nav>
 
   <main>
-    <h1>One More Minute Until the End of the World</h1>
+    <h1>INVADERS</h1>
     <p>Este é um jogo retrô em 8-bit onde você controla um sobrevivente humano dentro de uma estrutura metálica que combate ondas de robôs hostis. A cada minuto, você recebe um power‑up diferente, que pode melhorar sua velocidade, dano ou resistência. O objetivo é sobreviver o máximo de tempo possível.</p>
 
     <h2>Como jogar:</h2>
