--- a/PRATICA/PROJETO/jogo.html
+++ b/PRATICA/PROJETO/jogo.html
@@ -17,7 +17,7 @@
   </nav>
 
   <main>
-    <h1>One More Minute Until the End of the World</h1>
+    <h1>INVADERS</h1>
 
     <div class="game-container">
       <canvas id="gameCanvas" width="1000" height="505"></canvas>
