--- a/PRATICA/PROJETO/jogo.html
+++ b/PRATICA/PROJETO/jogo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jogo: One More Minute Until the End of the World</title>
+  <title>Invaders</title>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -23,7 +23,6 @@
       <canvas id="gameCanvas" width="1000" height="505"></canvas>
       <button id="startButton">Start!</button>
     </div>
-    <footer>© 2025 – Projeto acadêmico FEI | One More Minute Until the End of the World</footer>
   </main>
   <script src="script.js"></script>
 </body>
